# puntini

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_TODO.md  GEMINI.md  Makefile  README.md
.cursor/rules/: puntini.mdc
.github/workflows/: backend-ci.yml  codeql.yml
apps/backend/: F1_1_IMPLEMENTATION.md  GEMINI.md  Makefile  README.md  __init__.py  bandit-report.json  config.json  config.py  demo_f1_1.py  main.py  pyproject.toml  requirements.txt  run_server.py
apps/backend/agent/: __init__.py  agent_state.py  graph.py
apps/backend/api/: __init__.py  routers.py  session_manager.py  user_session.py
apps/backend/config/: __init__.py  config.py
apps/backend/context/: context_manager.py
apps/backend/graphstore/: __init__.py  neo4j_store.py  networkx_store.py  store.py
apps/backend/models/: __init__.py  base.py  domain.py  graph.py  session.py
apps/backend/prompts/: extraction_prompts.py
apps/backend/reports/: bandit-report.json  black-report.txt  flake8-report.txt  lint-summary.md  mypy-report.txt  mypy-report.xml  pylint-report.json  ruff-report.json  safety-report.json
apps/backend/scripts/: lint.sh
apps/backend/services/: llm_service.py
apps/backend/test_logs/: app.log.1  app.log.2
apps/backend/tests/: test_agent.py  test_api_endpoints.py  test_config.py  test_f1_1_flow.py  test_integration_f1_1.py  test_placeholder.py  test_session_management.py
apps/backend/tools/: extraction_tools.py  tool_registry.py
apps/backend/validation/: validation_pipeline.py
apps/frontend/: .eslintrc.cjs  package-lock.json  package.json
apps/frontend/app/chat/: ChatPage.tsx
apps/frontend/app/components/dashboard/: Dashboard.tsx
apps/frontend/app/components/project/: ProjectContext.tsx
apps/frontend/app/components/session/: SessionManager.tsx
apps/frontend/app/components/task/: TaskManager.tsx
apps/frontend/app/components/ui/: avatar.tsx  tabs.tsx
apps/frontend/app/routes/: chat.tsx  dashboard.tsx  home.tsx
apps/frontend/app/utils/: session.ts
backend/: AGENTS.md
backend/tests/: test_config.py  test_placeholder.py
docs/: AGENT_CORE_LOGIC.md  PYTHON_CODING_STANDARDS.md
